<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="about_title">關於 Android weather</string>
    <string name="about_msg">Android weather, 練習用</string>
    <string name="label_teacher">Teacher</string>
	<string name="teacher_uri">http://www3.csie.fju.edu.tw/image/teacherImg/T28.jpg</string>
	<string name="input_error">請輸入地名</string>
	<string name="current_location_label">當前位置</string>
	<string name="other_location_label">其他地區</string>
	<string name="current_weather_label">現在天氣 :</string>
	<string name="current_temperature_label">現在溫度 :</string>
	<string name="humidity_label">相對濕度 :</string>
	<string name="btn_reliable">Reliable</string>
	<string name="btn_unreliable">Unreable</string>
	<string name="btn_search">搜尋</string>
	<string name="last_update">最後更新</string>
	<string name="reliability_label">可靠度</string>
	<string name="location_label">位置</string>
</resources>